Fix for text contrast, and image size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,17 +2,18 @@
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
+  
   color: #3a3a3a;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 header {
   height: 200px;
   color: #ffffff;
   text-transform: uppercase;
-  background: url("../images/header-pexels-victor-freitas-949126.jpg") no-repeat center/cover;
+  background: url("../images/header-pexels-victor-freitas-949126.jpg") no-repeat
+    center/cover;
 }
 
 #logo {
@@ -51,7 +52,7 @@ main {
 
 .color-h {
   background-color: rgb(213, 213, 213);
-  z-index: 5; 
+  z-index: 5;
   width: 100vw;
 }
 
@@ -97,7 +98,7 @@ main {
   width: 80vw;
   margin-top: -20px;
   margin-bottom: -30px;
-  margin-left: 6%;  
+  margin-left: 6%;
 }
 
 .freey {
@@ -118,18 +119,16 @@ main {
   margin-left: 6%;
 }
 
-
 /* IMG AND SIDE BLOBS */
 .image {
   width: 50vw;
   border-radius: 20px;
   margin-left: 21%;
   margin-bottom: -50px;
-  
 }
 
 .img-right {
-  margin-top: -40px; 
+  margin-top: -40px;
 }
 
 .image-inside {
@@ -188,7 +187,8 @@ main {
 }
 
 #yoga-class {
-  background: url(../images/yoga-class-pexels-cliff-booth-4056723.jpg) no-repeat center/cover;
+  background: url(../images/yoga-class-pexels-cliff-booth-4056723.jpg) no-repeat
+    center/cover;
   display: flex;
   flex-wrap: wrap;
 }
@@ -219,7 +219,7 @@ main {
   box-shadow: 0 0 30px #2a2a2a;
 }
 
-/* TEXT PROPS*/ 
+/* TEXT PROPS*/
 .h2-right,
 .h2-left {
   text-align: center;
@@ -233,16 +233,18 @@ h1 {
 
 em {
   font-weight: 600;
-  color: rgb(183, 77, 77);
+  color: rgb(144, 43, 43);
+}
+
+em2 {
+  font-weight: 600;
+  font-size: 1.1em;
+  color: rgb(51, 51, 51);
 }
 
 a {
   text-decoration: none;
-  color: rgb(183, 77, 77);
-}
-
-.strong {
-  font-size: 40px;
+  color: rgb(144, 43, 43);
 }
 
 .hidden {
@@ -251,7 +253,9 @@ a {
 
 /* FORM */
 /* Style inputs */
-input[type=text], select, textarea {
+input[type="text"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -260,7 +264,7 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=submit] {
+input[type="submit"] {
   background-color: rgba(185, 185, 185, 0.3);
   color: white;
   border: 1px solid rgb(117, 117, 117);
@@ -268,7 +272,7 @@ input[type=submit] {
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type="submit"]:hover {
   background-color: rgba(112, 112, 112, 0.3);
 }
 
@@ -279,10 +283,10 @@ input[type=submit]:hover {
   padding: 20px;
 }
 
-/* FLEX PROPS */ 
-.flex-column  {
+/* FLEX PROPS */
+.flex-column {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .flex-wrap {
@@ -301,7 +305,6 @@ input[type=submit]:hover {
   justify-content: center;
 }
 
-
 .hide {
   display: none;
 }
@@ -313,7 +316,7 @@ hr {
 }
 
 hr.red-solid {
-  border-top: 2px solid rgb(183, 77, 77);
+  border-top: 2px solid rgb(144, 43, 43);
   margin-bottom: 30px;
 }
 
@@ -321,9 +324,8 @@ hr.red-solid {
 .parallax-1,
 .parallax-2,
 .parallax-3 {
-
   /* SET HEIGHT */
-  min-height: 200px; 
+  min-height: 200px;
 
   margin-left: -50px;
 
@@ -335,17 +337,17 @@ hr.red-solid {
 
 .parallax-1 {
   /* MACHINE - FREE IMAGE */
-  background-image: url("../images/free-para-pexels-leon-ardho-1552242.jpg"); 
+  background-image: url("../images/free-para-pexels-leon-ardho-1552242.jpg");
 }
 
 .parallax-2 {
   /* YOGA IMAGE */
-  background-image: url("../images/yoga-para-pexels-elina-fairytale-3822864.jpg");  
+  background-image: url("../images/yoga-para-pexels-elina-fairytale-3822864.jpg");
 }
 
 .parallax-3 {
   /* MEMBER IMAGE */
-  background-image: url("../images/members-para-pexels-andrea-piacquadio-3757941.jpg");  
+  background-image: url("../images/members-para-pexels-andrea-piacquadio-3757941.jpg");
 }
 
 /* FOOTER */
@@ -354,8 +356,10 @@ footer {
   color: #ececec;
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   height: 30px;
+
 }
 
 /* BUTTONS */
@@ -381,7 +385,7 @@ footer {
 }
 
 .slide {
-  background: rgba(213, 213, 213, .3);
+  background: rgba(213, 213, 213, 0.3);
   bottom: 0;
   height: 100%;
   left: -200px;
@@ -389,7 +393,6 @@ footer {
   transition: all 0.35s ease-Out;
   width: 100%;
 }
-
 
 #button-1:hover .slide,
 #button-2:hover .slide,
@@ -415,16 +418,16 @@ footer {
   }
 
   #logo {
-      font-size: 300%;
-      margin-top: -30px;
-      margin-bottom: -5px;
+    font-size: 300%;
+    margin-top: -30px;
+    margin-bottom: -5px;
   }
 
   .text {
     text-align: center;
     padding: 80px;
   }
-  
+
   .text-inside {
     font-size: 1em;
   }
@@ -446,7 +449,6 @@ footer {
     bottom: -9999px;
     margin: auto;
   }
-
 }
 
 /* Media query: tablets and larger (1040px and up) */
@@ -463,7 +465,7 @@ footer {
     letter-spacing: 2px;
     line-height: 1;
     text-align: end;
-}
+  }
 
   nav {
     display: flex;
@@ -481,7 +483,6 @@ footer {
     text-decoration: none;
   }
 
-
   h4-header {
     font-size: 60px;
   }
@@ -491,7 +492,6 @@ footer {
     width: 300px;
     border-radius: 20px;
   }
-  
 
   #home {
     display: flex;
@@ -502,16 +502,16 @@ footer {
   }
 
   #yoga {
-      display: flex;
-  } 
+    display: flex;
+  }
 
   #free {
     display: flex;
-  } 
+  }
 
   #membermark {
     display: flex;
-  } 
+  }
 
   .hide {
     display: block;
@@ -521,7 +521,7 @@ footer {
     width: 50vw;
     margin-top: -150px;
     padding: 50px;
-    margin-left: .4%;
+    margin-left: 0.4%;
   }
 
   .freew {
@@ -563,8 +563,8 @@ footer {
 
   .black-pop-left {
     background-color: #2b2b2b;
-    color: #cacaca; 
-    width: 250px; 
+    color: #cacaca;
+    width: 250px;
     height: 300px;
     margin-top: 500px;
     margin-left: 3%;
@@ -585,8 +585,8 @@ footer {
   }
 
   .img-left {
-   margin-left: -30px;
-  } 
+    margin-left: -30px;
+  }
 
   .h2-right {
     text-align: right;
@@ -633,10 +633,9 @@ footer {
   .parallax-2,
   .parallax-3 {
     width: 100vw;
-    min-height: 500px; 
+    min-height: 500px;
     margin-left: 0px;
   }
- 
 }
 
 /* Media query: tablets and larger (2000px and up) */
@@ -656,20 +655,17 @@ footer {
     font-size: large;
     padding-right: 22%;
   }
-  
+
   .welcome {
     width: 40vw;
-  
   }
 
   .freew {
     width: 40vw;
-   
   }
 
   .freem {
     width: 40vw;
-  
   }
 
   .freey {
@@ -683,5 +679,4 @@ footer {
     bottom: -9999px;
     margin: auto;
   }
-
 }
